--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet"> -->
     <style>
       body {
         font-family: 'Quattrocento', serif;
